Fix spacing.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,6 +28,7 @@ header > p {
 }
 
 #content {
+    min-height: 90vh;
     margin: 0 1vw;
 }
 
